--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-aniso8601==1.1.0
 click==6.6
-Flask==0.11.1
+dulwich==0.16.3
+Flask==0.12
 Flask-Cors==3.0.2
-Flask-RESTful==0.3.5
+gitdb2==2.0.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-python-dateutil==2.5.3
-pytz==2016.6.1
 six==1.10.0
-Werkzeug==0.11.10
+smmap2==2.0.1
+uWSGI==2.0.14
+Werkzeug==0.11.13
