--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 appdirs==1.4.0
 certifi==2018.10.15
 chardet==3.0.4
-click==6.6
+Click==7.0
 dulwich==0.16.3
-Flask==0.12
+Flask==1.0.2
 Flask-Cors==3.0.2
 gitdb2==2.0.0
 idna==2.7
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
 packaging==16.8
 pyparsing==2.1.10
 requests==2.20.0
@@ -17,4 +17,4 @@ six==1.10.0
 smmap2==2.0.1
 urllib3==1.24
 uWSGI==2.0.14
-Werkzeug==0.11.13
+Werkzeug==0.14.1
