--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,4 +1,3 @@
-user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
@@ -8,7 +7,6 @@ events {
 }
 
 http {
-
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
@@ -18,11 +16,8 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
-	ssl_prefer_server_ciphers on;
-
 	access_log /dev/stdout;
-	error_log stderr;
+	error_log /dev/stderr;
 
 	gzip on;
 
@@ -31,22 +26,22 @@ http {
 	    server_name _;
 	   
 	    location /sbol-validator/ {
-		alias /opt/SBOL-Validator/src/validation-form/;
-		index html/form.html;
+		    alias /opt/SBOL-Validator/src/validation-form/;
+		    index html/form.html;
 	    }
 	    
 	    location /validate/ {
-		include uwsgi_params;
-		uwsgi_pass unix:/opt/SBOL-Validator/src/sbol-validator.sock;
+		    include uwsgi_params;
+		    uwsgi_pass unix:/opt/SBOL-Validator/src/sbol-validator.sock;
 	    }
 	    
 	    location /update/ {
-		include uwsgi_params;
-		uwsgi_pass unix:/opt/SBOL-Validator/src/sbol-validator.sock;
+		    include uwsgi_params;
+		    uwsgi_pass unix:/opt/SBOL-Validator/src/sbol-validator.sock;
 	    }
 
-            location /work/ {
-		alias /opt/SBOL-Validator/src/work/;
+        location /work/ {
+		    alias /opt/SBOL-Validator/src/work/;
 	    }
 	}
 
