--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
+sudo: required
+
 language: python
 python:
   - "3.6"
-# command to install dependencies
-install: "pip install -r requirements.txt"
-script:
-  - cd src
-  - python -m test.tester
-after_success:
-  - docker build -t zachzundel/sbolvalidator:snapshot .
-  - docker/push.sh
+services:
+  - docker
+
+jobs:
+  include:
+    - stage: test
+      install: "pip install -r requirements.txt"
+      script:
+        - cd src
+        - python -m test.tester
+    - stage: push
+      install: docker build -t zachzundel/sbolvalidator:snapshot .
+      script: docker/push.sh
+      if: branch = master AND type = push
