--- a/docker/nginx-converter.conf
+++ b/docker/nginx-converter.conf
@@ -4,8 +4,7 @@ include /etc/nginx/modules-enabled/*.conf;
 
 events {
 	worker_connections 768;
-}
-
+} 
 http {
 	sendfile on;
 	tcp_nopush on;
@@ -25,8 +24,8 @@ http {
 	    listen 80;
 	    server_name _;
 	   
-	    location /sbol-validator/ {
-		    alias /opt/SBOL-Validator/src/validation-form/;
+	    location / {
+		    alias /opt/SBOL-Validator/src/conversion-form/;
 		    index html/form.html;
 	    }
 	    
