--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: appleboy/ssh-action@v.0.0.2
-      - name: Pull new containers and restart on sbolstandard.org
+        name: Pull new containers and restart on sbolstandard.org
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
@@ -17,7 +17,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: appleboy/ssh-action@v.0.0.2
-        - name: Pull new containers and restart on sbolstandard.org
+          name: Pull new containers and restart on sbolstandard.org
           with:
             host: ${{ secrets.HOST }}
             username: ${{ secrets.USERNAME }}
