Only deploy on master, move from Travis to GH

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,44 @@
 name: Deploy
 
-on: [push]
+on:
+  push: 
+    branches:
+      - master
 
 jobs:
-  validator:
+  test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v1
+        with: 
+          python-version: '3.x'
+          name: Test
+        run: |
+          cd src
+          python -m test.tester
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker/build.sh
+          docker/push.sh
+
+  validator:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+        name: Build Docker containers
+        run: |
+          docker/build.sh
+          docker/push.sh
       - uses: appleboy/ssh-action@v.0.0.2
         name: Pull new containers and restart on sbolstandard.org
         with:
@@ -13,13 +46,15 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           command: systemctl restart validator
+  
   converter:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: appleboy/ssh-action@v.0.0.2
-          name: Pull new containers and restart on sbolstandard.org
-          with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USERNAME }}
-            key: ${{ secrets.KEY }}
-            command: systemctl restart converter
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+     - uses: appleboy/ssh-action@v.0.0.2
+        name: Pull new containers and restart on sbolstandard.org
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          command: systemctl restart converter
