--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: actions/setup-python@v1
         with: 
           python-version: '3.x'
-          name: Test
-        run: |
+      - run: |
           cd src
           python -m test.tester
 
@@ -23,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-        env:
+      - env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
@@ -35,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-        name: Build Docker containers
+      - name: Build Docker containers
         run: |
           docker/build.sh
           docker/push.sh
