--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
         with: 
           python-version: '3.x'
       - run: |
+          pip install -r requirements.txt
           cd src
           python -m test.tester
 
