--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask==2.2.5
 Flask-Cors==5.0.0
 gitdb2==2.0.0
 idna==3.7
-itsdangerous==1.1.0
+itsdangerous>=2.0
 Jinja2==3.1.4
 MarkupSafe==1.1.1
 packaging==16.8
