--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ gitdb2==2.0.0
 idna==3.7
 itsdangerous>=2.0
 Jinja2==3.1.4
-MarkupSafe==1.1.1
+MarkupSafe>=2.0
 packaging==16.8
 pyparsing==2.1.10
 requests==2.32.2
