--- a/src/sbol-validator.ini
+++ b/src/sbol-validator.ini
@@ -3,10 +3,16 @@ module = wsgi
 
 master = true
 processes = 5
+threads = 2
+enable-threads = true
+catch-exceptions = true
 callable = app
 socket = sbol-validator.sock
 chmod-socket = 666
 vacuum = true
 
-logto = log.log
+disable-logging = false
+logto = /dev/stdout
+logto2 = /dev/stderr
+
 die-on-term = true
